--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn Profile" class="linkedin-icon"></a>
             <a href="https://github.com/JoshuaScript-ScPo/JoshuaScript.git" target="_blank" class="github-link"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub profile" class="github-icon"></a> 
             <a href="https://substack.com/@joshuanuss" target="_blank" class="substackprofile-link"> <img src="https://camo.githubusercontent.com/bf1f6aa0d02c41f5d400c450c044f66db0e7c6a48b71da6c6269c9469b234094/68747470733a2f2f737562737461636b2e636f6d2f696d672f737562737461636b2e706e67" alt="substackprofile" class="substackprofile-icon"></a>
-            <a href="https://docs.google.com/document/d/1SBCm9_uBsNNG8gxJq7qmUBE0RbA7mDJfYgR92a2AgR4/edit?usp=sharing" target="_blank" class="cvpdf-link"> <img src="https://cdn-icons-png.flaticon.com/512/3789/3789854.png" alt="cvpdfprofile" class="cvpdf-icon"></a> Seeking an internship starting <span class="hilili"> Jan 2026 </span> in Corporate M&A/VC &mdash;Tech</p> 
+            <a href="https://docs.google.com/document/d/1SBCm9_uBsNNG8gxJq7qmUBE0RbA7mDJfYgR92a2AgR4/edit?usp=sharing" target="_blank" class="cvpdf-link"> <img src="https://cdn-icons-png.flaticon.com/512/3789/3789854.png" alt="cvpdfprofile" class="cvpdf-icon"></a> Seeking an internship starting <span class="hilili"> Jan 2026 </span> in Corporate M&A/VC - Tech</p> 
         </div> </header>
         <br><br><br><br><br><div class="tooltip"><p id="scrollou"><span class="rounded-rectangle">Discover my background&nbsp;&nbsp;&#x2935;</span><span class="tooltiptext">this is not a button</span></p></div>
         </div>
